--- a/style.css
+++ b/style.css
@@ -49,6 +49,35 @@ body {
     justify-content: center;
  }
 
+ .card > h2 {
+    color: goldenrod;
+    text-align: center;
+ }
+
+ .card > p {
+     text-align: center;
+     color: wheat;
+ }
+
+ .card > button {
+    margin-left: 15px;
+    margin-top: 49px;
+    padding: 0.8rem;
+    font-size: 15px;
+    font-weight: 600;
+    border-radius: 8px;
+    border: navajowhite;
+ }
+
+ .card > button:hover{
+     background-color: wheat;
+ }
+
+ .card > button > a {
+     text-decoration: none;
+     color: black;
+ }
+
  .logos {
      display: flex;
      justify-content: space-evenly;
@@ -81,6 +110,7 @@ body {
 
  .footer > h1 {
      text-align: center;
+     background-color: #2c2a2a;
      
  }
 
@@ -156,6 +186,7 @@ body {
     position: absolute;
     right: 0;
     top: 0;
+    z-index: 10;
   }
   .topnav.responsive a {
     float: none;
@@ -168,5 +199,15 @@ body {
  .footer > .coffee > h1 {
     font-size: 1.5rem;
 }
+.card > button {
+    margin-left: 2px;
+    margin-top: 30px;
+    padding: 0.2rem;
+    font-size: 15px;
+    font-weight: 600;
+    border-radius: 8px;
+    border: navajowhite;
+
+ }
 
 }
