--- a/blog.css
+++ b/blog.css
@@ -6,7 +6,7 @@ h1 {
     text-align: center;
     font-size: 40px;
     font-weight: 600;
-    color: gold;
+    color: rgb(255, 217, 0);
     text-decoration: underline;
 }
 
